--- a/docs/guides/getting-started/supported-blockchains.mdx
+++ b/docs/guides/getting-started/supported-blockchains.mdx
@@ -1,6 +1,6 @@
 # Supported Blockchains
 
-import DataTable from "../../src/components/DataTable/DataTable";
+import DataTable from "../../../src/components/DataTable/DataTable";
 import {supportedBlockchains, supportedTestnetRelayChains, columns} from "./supported-blockchains.table-data";
 
 The following table shows the full list of supported, reward-generating RelayChains
