fix broken links

--- a/docs/grove-api/02-ethereum/core-api/eth_getProof.mdx
+++ b/docs/grove-api/02-ethereum/core-api/eth_getProof.mdx
@@ -1,5 +1,5 @@
 import Schema from "@site/src/components/Schema/Schema"
 
-# eth_getUncleCountByBlockNumber
+# eth_getProof
 
-<Schema methodName="eth_getUncleCountByBlockNumber" />
+<Schema methodName="eth_getProof" />
