update doc subnav. update blog sidebar

--- a/blog/defi-kingdoms/index.mdx
+++ b/blog/defi-kingdoms/index.mdx
@@ -6,7 +6,7 @@ tags: [Case Studies, Web3 Gaming]
 ---
 
 import Card from "@site/src/components/Card/Card"
-import { Grid } from "@mantine/core"
+import { Grid, Text } from "@mantine/core"
 import SectionCTA from "@site/src/components/SectionCTA/SectionCTA"
 
 ## DeFi Kingdom's Success Story with Grove
