add schema components

--- a/docs/ethereum-api/core-api/eth_call.mdx
+++ b/docs/ethereum-api/core-api/eth_call.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_call
 
-<Schema methodName="eth_call" />
+<SchemaDocument methodName="eth_call" />
