--- a/docs/ethereum-api/core-api/eth_getUncleCountByBlockHash.mdx
+++ b/docs/ethereum-api/core-api/eth_getUncleCountByBlockHash.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_getUncleCountByBlockHash
 
-<Schema methodName="eth_getUncleCountByBlockHash" />
+<SchemaDocument methodName="eth_getUncleCountByBlockHash" />
