--- a/docs/ethereum-api/core-api/eth_mining.mdx
+++ b/docs/ethereum-api/core-api/eth_mining.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_mining
 
-<Schema methodName="eth_mining" />
+<SchemaDocument methodName="eth_mining" />
