--- a/docs/ethereum-api/core-api/eth_chainId.mdx
+++ b/docs/ethereum-api/core-api/eth_chainId.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_chainId
 
-<Schema methodName="eth_chainId" />
+<SchemaDocument methodName="eth_chainId" />
