--- a/docs/ethereum-api/core-api/eth_gasPrice.mdx
+++ b/docs/ethereum-api/core-api/eth_gasPrice.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_gasPrice
 
-<Schema methodName="eth_gasPrice" />
+<SchemaDocument methodName="eth_gasPrice" />
