--- a/docs/ethereum-api/core-api/eth_getProof.mdx
+++ b/docs/ethereum-api/core-api/eth_getProof.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_getProof
 
-<Schema methodName="eth_getProof" />
+<SchemaDocument methodName="eth_getProof" />
