--- a/docs/ethereum-api/core-api/eth_getTransactionByBlockHashAndIndex copy.mdx
+++ b/docs/ethereum-api/core-api/eth_getTransactionByBlockHashAndIndex copy.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_getTransactionByBlockHashAndIndex
 
-<Schema methodName="eth_getTransactionByBlockHashAndIndex" />
+<SchemaDocument methodName="eth_getTransactionByBlockHashAndIndex" />
