--- a/docs/ethereum-api/core-api/eth_getTransactionByBlockNumberAndIndex.mdx
+++ b/docs/ethereum-api/core-api/eth_getTransactionByBlockNumberAndIndex.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_getTransactionByBlockNumberAndIndex
 
-<Schema methodName="eth_getTransactionByBlockNumberAndIndex" />
+<SchemaDocument methodName="eth_getTransactionByBlockNumberAndIndex" />
