--- a/docs/ethereum-api/core-api/eth_getTransactionCount.mdx
+++ b/docs/ethereum-api/core-api/eth_getTransactionCount.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_getTransactionCount
 
-<Schema methodName="eth_getTransactionCount" />
+<SchemaDocument methodName="eth_getTransactionCount" />
