--- a/docs/ethereum-api/core-api/eth_getTransactionReceipt.mdx
+++ b/docs/ethereum-api/core-api/eth_getTransactionReceipt.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_getTransactionReceipt
 
-<Schema methodName="eth_getTransactionReceipt" />
+<SchemaDocument methodName="eth_getTransactionReceipt" />
