--- a/docs/ethereum-api/core-api/eth_getUncleByBlockNumberAndIndex.mdx
+++ b/docs/ethereum-api/core-api/eth_getUncleByBlockNumberAndIndex.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_getUncleByBlockNumberAndIndex
 
-<Schema methodName="eth_getUncleByBlockNumberAndIndex" />
+<SchemaDocument methodName="eth_getUncleByBlockNumberAndIndex" />
