--- a/docs/ethereum-api/core-api/eth_hashrate.mdx
+++ b/docs/ethereum-api/core-api/eth_hashrate.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_hashrate
 
-<Schema methodName="eth_hashrate" />
+<SchemaDocument methodName="eth_hashrate" />
