--- a/docs/ethereum-api/core-api/eth_submitWork.mdx
+++ b/docs/ethereum-api/core-api/eth_submitWork.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_submitWork
 
-<Schema methodName="eth_submitWork" />
+<SchemaDocument methodName="eth_submitWork" />
