--- a/docs/ethereum-api/core-api/eth_syncing.mdx
+++ b/docs/ethereum-api/core-api/eth_syncing.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_syncing
 
-<Schema methodName="eth_syncing" />
+<SchemaDocument methodName="eth_syncing" />
