--- a/docs/polygon-api/core-api/eth_blockNumber.mdx
+++ b/docs/polygon-api/core-api/eth_blockNumber.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_blockNumber
 
-<Schema methodName="eth_blockNumber" />
+<SchemaDocument methodName="eth_blockNumber" />
