--- a/docs/polygon-api/core-api/eth_getBalance.mdx
+++ b/docs/polygon-api/core-api/eth_getBalance.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_getBalance
 
-<Schema methodName="eth_getBalance" />
+<SchemaDocument methodName="eth_getBalance" />
