--- a/docs/polygon-api/core-api/eth_getBlockByHash.mdx
+++ b/docs/polygon-api/core-api/eth_getBlockByHash.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_getBlockByHash
 
-<Schema methodName="eth_getBlockByHash" />
+<SchemaDocument methodName="eth_getBlockByHash" />
