--- a/docs/polygon-api/core-api/eth_getBlockByNumber.mdx
+++ b/docs/polygon-api/core-api/eth_getBlockByNumber.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_getBlockByNumber
 
-<Schema methodName="eth_getBlockByNumber" />
+<SchemaDocument methodName="eth_getBlockByNumber" />
