--- a/docs/polygon-api/core-api/eth_getBlockTransactionCountByHash.mdx
+++ b/docs/polygon-api/core-api/eth_getBlockTransactionCountByHash.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_getBlockTransactionCountByHash
 
-<Schema methodName="eth_getBlockTransactionCountByHash" />
+<SchemaDocument methodName="eth_getBlockTransactionCountByHash" />
