--- a/docs/polygon-api/core-api/eth_getBlockTransactionCountByNumber.mdx
+++ b/docs/polygon-api/core-api/eth_getBlockTransactionCountByNumber.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_getBlockTransactionCountByNumber
 
-<Schema methodName="eth_getBlockTransactionCountByNumber" />
+<SchemaDocument methodName="eth_getBlockTransactionCountByNumber" />
