--- a/docs/polygon-api/core-api/eth_getLogs.mdx
+++ b/docs/polygon-api/core-api/eth_getLogs.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_getLogs
 
-<Schema methodName="eth_getLogs" />
+<SchemaDocument methodName="eth_getLogs" />
