--- a/docs/polygon-api/core-api/eth_getStorageAt.mdx
+++ b/docs/polygon-api/core-api/eth_getStorageAt.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_getStorageAt
 
-<Schema methodName="eth_getStorageAt" />
+<SchemaDocument methodName="eth_getStorageAt" />
