--- a/docs/polygon-api/core-api/eth_getTransactionByHash.mdx
+++ b/docs/polygon-api/core-api/eth_getTransactionByHash.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_getTransactionByHash
 
-<Schema methodName="eth_getTransactionByHash" />
+<SchemaDocument methodName="eth_getTransactionByHash" />
