--- a/docs/polygon-api/core-api/eth_getUncleByBlockHashAndIndex.mdx
+++ b/docs/polygon-api/core-api/eth_getUncleByBlockHashAndIndex.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_getUncleByBlockHashAndIndex
 
-<Schema methodName="eth_getUncleByBlockHashAndIndex" />
+<SchemaDocument methodName="eth_getUncleByBlockHashAndIndex" />
