--- a/docs/polygon-api/core-api/eth_getUncleCountByBlockNumber.mdx
+++ b/docs/polygon-api/core-api/eth_getUncleCountByBlockNumber.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_getUncleCountByBlockNumber
 
-<Schema methodName="eth_getUncleCountByBlockNumber" />
+<SchemaDocument methodName="eth_getUncleCountByBlockNumber" />
