--- a/docs/polygon-api/core-api/eth_getWork.mdx
+++ b/docs/polygon-api/core-api/eth_getWork.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_getWork
 
-<Schema methodName="eth_getWork" />
+<SchemaDocument methodName="eth_getWork" />
