--- a/docs/polygon-api/core-api/eth_protocolVersion.mdx
+++ b/docs/polygon-api/core-api/eth_protocolVersion.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_protocolVersion
 
-<Schema methodName="eth_protocolVersion" />
+<SchemaDocument methodName="eth_protocolVersion" />
