--- a/docs/polygon-api/core-api/eth_sendRawTransaction.mdx
+++ b/docs/polygon-api/core-api/eth_sendRawTransaction.mdx
@@ -1,5 +1,5 @@
-import Schema from "@site/src/components/Schema/Schema"
+import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
 # eth_sendRawTransaction
 
-<Schema methodName="eth_sendRawTransaction" />
+<SchemaDocument methodName="eth_sendRawTransaction" />
