--- a/docs/grove-api/getting-started/supported-blockchains.mdx
+++ b/docs/grove-api/getting-started/supported-blockchains.mdx
@@ -1,20 +1,7 @@
 # Supported Blockchains
 
-import DataTable from "../../../src/components/DataTable/DataTable";
-import {supportedBlockchains, supportedTestnetRelayChains, columns} from "./supported-blockchains.table-data";
+import Blockchains from "@site/src/components/Blockchains/Blockchains";
 
 The following table shows the full list of supported, reward-generating RelayChains
 
-<DataTable
-    columns={columns}
-    data={supportedBlockchains}
-/>
-
-## Pocket Testnet RelayChains
-
-The following table shows the full list of currently-supported blockchains on the Pocket Testnet.
-
-<DataTable
-    columns={columns}
-    data={supportedTestnetRelayChains}
-/>
+<Blockchains />
