add chains plugin to get chains from db and store it globally.

--- a/docs/grove-api/getting-started/chain-endpoints.mdx
+++ b/docs/grove-api/getting-started/chain-endpoints.mdx
@@ -11,18 +11,18 @@ At Grove we define chains slightly different than most. Below are terms and defi
 
 ## Node Configuration Terms
 
-- **Mainnet** 
-    - The standard pruned node coniguration for that specific chain. Sometimes also referred to as near-head and typically supporting the latest 128 blocks. 
-    - example: [eth-mainnet](/ethereum-api/chain-endpoints/eth-mainnet)
-- **Archival** 
-    - The node configuration with access to the full historical blockchain data. 
-    - example: [eth-archival](/ethereum-api/chain-endpoints/eth-archival)
-- **Trace** 
-    - A node configuration that supports the trace methods. 
-    - example: [eth-trace](/ethereum-api/chain-endpoints/eth-trace)
-- **Custom** 
-    - A custom node configuration specfic to Grove. 
-    - example: [solana-custom](#)
+- **Mainnet**
+  - The standard pruned node coniguration for that specific chain. Sometimes also referred to as near-head and typically supporting the latest 128 blocks.
+  - example: [eth-mainnet](/ethereum-api/chain-endpoints/eth-mainnet)
+- **Archival**
+  - The node configuration with access to the full historical blockchain data.
+  - example: [eth-archival](/ethereum-api/chain-endpoints/eth-archival)
+- **Trace**
+  - A node configuration that supports a subset of client-agnostic trace and debug methods.
+  - example: [eth-trace](/ethereum-api/chain-endpoints/eth-trace)
+- **Custom**
+  - A custom node configuration specfic to Grove.
+  - example: [solana-custom](#)
 
 ## Supported Endpoints
 
