update supported apis for each endpoint

--- a/docs/ethereum-api/specs/trace-api.mdx
+++ b/docs/ethereum-api/specs/trace-api.mdx
@@ -1,11 +1,11 @@
 ---
 sidebar_position: 1
-sidebar_label: Full API
+sidebar_label: Trace API
 ---
 
-import spec from "@site/static/schemas/ethereum-archival.json"
+import spec from "@site/static/schemas/evm-trace.json"
 import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
-# Ethereum Full API (Example)
+# Ethereum Trace API
 
 <SchemaDocument specImport={spec} />
