add trace and debug api

--- a/docs/ethereum-api/specs/debug-api.mdx
+++ b/docs/ethereum-api/specs/debug-api.mdx
@@ -1,11 +1,11 @@
 ---
-sidebar_position: 2
-sidebar_label: Trace API
+sidebar_position: 3
+sidebar_label: Debug API
 ---
 
-import spec from "@site/static/schemas/evm-trace.json"
+import spec from "@site/static/schemas/evm-debug.json"
 import SchemaDocument from "@site/src/components/SchemaDocument/SchemaDocument"
 
-# Ethereum Trace API
+# Ethereum Debug API
 
 <SchemaDocument specImport={spec} />
