--- a/docs/grove-api/getting-started/api-structure.mdx
+++ b/docs/grove-api/getting-started/api-structure.mdx
@@ -11,18 +11,15 @@ https://**\{chain-prefix\}**.rpc.grove.city/v1/**\{app-id\}**
 
 ### **chain-prefix**
 
-A chain-prefix is made up of two parts, the specific chain and its configuration.
-
-Example: **\{chain\}**-**\{config\}**
-
-You can learn more about what chains and configuration types we support for each chain on the [chain endpoints](/grove-api/getting-started/chain-endpoints) page.
+A chain-prefix is made up of two parts, the specific chain and its configuration. You can learn more about what chains and configuration types we support for each chain on the [chain endpoints](/grove-api/getting-started/chain-endpoints) page.
 
 ### app-id
 
 The app-id is your unique application ID created by you when you signed up to the [Grove Portal](https://portal.grove.city).
 
-<Alert mt="xl" variant="default" title="API `gateway.pokt.network` is being deprecated">
+--- 
+
+## API "gateway.pokt.network" is being deprecated
   Starting February 01, 2024 the `gateway.pokt.network` API will no longer be supported.
   Please start moving all applications and traffic over to `rpc.grove.city` as soon as you
   can.
-</Alert>
