update quality content

--- a/docs/grove-api/getting-started/api-structure.mdx
+++ b/docs/grove-api/getting-started/api-structure.mdx
@@ -19,7 +19,6 @@ The app-id is your unique application ID created by you when you signed up to th
 
 --- 
 
-## API "gateway.pokt.network" is being deprecated
-  Starting February 01, 2024 the `gateway.pokt.network` API will no longer be supported.
-  Please start moving all applications and traffic over to `rpc.grove.city` as soon as you
-  can.
+> API "gateway.pokt.network" is being deprecated
+>
+> Starting February 01, 2024 the `gateway.pokt.network` API will no longer be supported. Please start moving all applications and traffic over to `rpc.grove.city` as soon as you can.
