add gabi's feedback

--- a/docs/grove-api/getting-started/api-structure.mdx
+++ b/docs/grove-api/getting-started/api-structure.mdx
@@ -11,13 +11,13 @@ https://**\{chain-prefix\}**.rpc.grove.city/v1/**\{app-id\}**
 
 ### **chain-prefix**
 
-A chain-prefix is made up of two parts, the specific chain and its configuration. You can learn more about what chains and configuration types we support for each chain on the [chain endpoints](/grove-api/getting-started/chain-endpoints) page.
+A chain-prefix is made up of two parts, the chain name and its configuration. You can learn more about the chains and configurations we support on the [chain endpoints](/grove-api/getting-started/chain-endpoints) page.
 
 ### app-id
 
-The app-id is your unique application ID created by you when you signed up to the [Grove Portal](https://portal.grove.city).
+The app-id is the unique application identifier automatically generated when you sign up to the [Grove Portal](https://portal.grove.city) and create an application.
 
---- 
+---
 
 > API "gateway.pokt.network" is being deprecated
 >
