- Fixing DataTable import

--- a/docs/guides/supported-blockchains.mdx
+++ b/docs/guides/supported-blockchains.mdx
@@ -1,5 +1,4 @@
-# Supported blockchains
-
+import DataTable from "../../src/components/DataTable/DataTable";
 import {supportedBlockchains, supportedTestnetRelayChains, columns} from "./supported-blockchains.table-data";
 
 The following table shows the full list of supported, reward-generating RelayChains
