--- a/docs/guides/supported-blockchains.mdx
+++ b/docs/guides/supported-blockchains.mdx
@@ -1,6 +1,8 @@
 import DataTable from "../../src/components/DataTable/DataTable";
 import {supportedBlockchains, supportedTestnetRelayChains, columns} from "./supported-blockchains.table-data";
 
+# Supported Blockchains
+
 The following table shows the full list of supported, reward-generating RelayChains
 
 <DataTable
