--- a/docs/ethereum-api/specs/debug-api.mdx
+++ b/docs/ethereum-api/specs/debug-api.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 3
-sidebar_label: Debug API
+sidebar_label: EVM Debug API
 ---
 
 import spec from "@site/static/schemas/evm-debug.json"
