--- a/docs/grove-api/getting-started/api-structure.mdx
+++ b/docs/grove-api/getting-started/api-structure.mdx
@@ -7,15 +7,15 @@ import { Alert } from "@mantine/core"
 
 # API Structure
 
-https://**\{chain-prefix\}**.rpc.grove.city/v1/**\{app-id\}**
+https://**\{NETWORK\}**.rpc.grove.city/v1/**\{APP_ID\}**
 
-### **chain-prefix**
+### **NETWORK**
 
-A chain-prefix is made up of two parts, the chain name and its configuration. You can learn more about the chains and configurations we support on the [chain endpoints](/grove-api/getting-started/chain-endpoints) page.
+A network is made up of two parts, the chain name and its configuration. You can learn more about the chains and configurations we support on the [chain endpoints](/grove-api/getting-started/chain-endpoints) page.
 
-### app-id
+### APP_ID
 
-The app-id is the unique application identifier automatically generated when you sign up to the [Grove Portal](https://portal.grove.city) and create an application.
+The APP_ID is the unique application identifier automatically generated when you sign up to the [Grove Portal](https://portal.grove.city) and create an application.
 
 ---
 
