--- a/docs/ethereum-api/specs/trace-api.mdx
+++ b/docs/ethereum-api/specs/trace-api.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 2
-sidebar_label: Trace API
+sidebar_label: EVM Trace API
 ---
 
 import spec from "@site/static/schemas/evm-trace.json"
