--- a/docs/scroll-api/specs/core-api.mdx
+++ b/docs/scroll-api/specs/core-api.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 1
-sidebar_label: Core API
+sidebar_label: EMV Core API
 ---
 
 import spec from "@site/static/schemas/evm-core.json"
