major fix to supported blockchains. some cleanup

--- a/docs/grove-api/getting-started/chain-endpoints.mdx
+++ b/docs/grove-api/getting-started/chain-endpoints.mdx
@@ -11,7 +11,7 @@ At Grove we define chains slightly different than most. Below are terms and defi
 
 ## Node Configuration Terms
 
-- **Mainnet**
+- **Pruned / Near-Head**
   - The standard pruned node coniguration for that specific chain. Sometimes also referred to as near-head and typically supporting the latest 128 blocks.
 - **Archival**
   - The node configuration with access to the full historical blockchain data.
